--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse justify-content-lg-around" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0 d-flex gap-5">
                         <li class="nav-item">
-                            <a style="color: #FFFFFF;" class="nav-link active" aria-current="page" href="#">Главный</a>
+                            <a style="color: #FFFFFF;" class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
                             <a style="color: #ffffff;" class="nav-link" href="#">О нас</a>
