--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a style="color: #FFFFFF;" class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a style="color: #ffffff;" class="nav-link" href="#">О нас</a>
+                            <a style="color: #ffffff;" class="nav-link" href="#">hfoufhejof</a>
                         </li>
                         <li class="nav-item">
                             <a style="color: #FFFFFF;" class="nav-link" href="#">
