--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                         </li>
                         <li class="nav-item">
-                            <a style="color: #FFFFFF;" class="nav-link" href="#">Контакты</a>
+                            <a style="color: #FFFFFF;" class="nav-link" href="#">Contacts</a>
                         </li>
                     </ul>
                     <form class="d-flex gap-4">
